--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 :root {
-  color-scheme: light dark;
+  color-scheme: light;
   font-family: "Trebuchet MS", "Avenir Next", sans-serif;
   line-height: 1.5;
 
@@ -228,7 +228,9 @@
 
 html,
 body {
+  max-width: 100vw;
   min-height: 100%;
+  overflow-x: clip;
 }
 
 body {
